* FEA#7122 Add default quote number sequence on offered configuration
* FEA#7002 Display the contract's icon in its form view
* BUG#6993 Removing simple json import
* BUG#6870 Use party's main address instead of searching for to date active address in contract's contact
* BUG#6748 Possibility to clear the termination reason when reactivating a contract
* BUG#6616 Allow termination in previous activation period

Version 1.12 - 2017-04-28
* FEA#0000 Add Contract Notifications
* FEA#0000 Add chains for decline inactive quotes and terminate contract batches
* FEA#0000 Allow to filter by initial start date

Version 1.10 - 2016-11-02
* FEA#0000 Display contract status in color in form view according to its value

Version 1.8 - 2016-07-06
* FEA#0000 Batch to automatically decline quotes exceeding a delay of inactivity
* FEA#0000 Add order methods on start_date, end_date and rec_name for contract list view sorting
* FEA#0000 Add distinct quote entry point
* FEA#0000 Allow to initialize contacts and check their consistency

Version 1.6 - 2015-12-23
* FEA#0000 Add contract field on event logs
* FEA#0000 Display contract in different colors in tree view according to state.
* FEA#0000 Add contract icon on tree view

Version 1.5 - 2015-09-24
* FEA#0000 Add cache on contract.sub_status
* FEA#0000 Add contract.option.version and move extra_data in contract module
* FEA#0000 Voiding a contract preserves initial_start_date and activation_history
* FEA#0000 Add sub_status to option

Version 1.4 - 2015-05-29
* FEA#0000 Add wizard to stop (terminate / void) contracts
* FEA#0000 Add relate to event logs from contract if the module is installed
* FEA#0000 Allow to pre-set termination reason

Version 1.3 - 2015-01-22
* FEA#0000 Centralize calculate method
* FEA#0000 Add automatic calculation of end_dates
* FEA#0000 Add subscription web service
* FEA#0000 Add possibility to subscribe several options at the same time with a package