@@ -1,3 +1,4 @@
+* BUG#6468 Le calcul de la date de début d'une option doit utiliser la date de début manuelle de l'élément couvert si défini
 * FEA#7122 Ajout d'une séquence de numéro de devis par défaut sur la configuration produit
 * FEA#7002 Affichage de l'icône du contrat en vue formulaire
 * BUG#6993 Suppression de l'import de simplejson
